--- a/index.html
+++ b/index.html
@@ -12,8 +12,44 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+      </script>
 </head>
 <body>
-    
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28 ">
+        <Header class="flex pt-10 mb-20 items-center">
+            <div class="flex flex-col gap-5 ">
+                <h1 class="text-6xl md: text-6xl font-semibold">It's good <br>
+                    tea time at The <br>Tea House</h1>
+                <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <div>
+                <button class="bg-gradient-to-r from-orange-500 to-red-600 rounded-md px-6 py-3 text-white font-semibold">Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i></button></div>
+            </div>
+            <div class="relative">
+                <div>
+                    <img class="w-full" src="images/banner.png" alt="">
+                </div>
+                <div class="flex  items-center gap-3 bg-white shadow-xl px-3 py-3 absolute bottom-8 left-20 rounded-sm">
+                    <div><i class="fa-solid fa-star text-yellow-400 text-2xl"></i></div>
+                    <div>
+                        <h2 class="text-3xl font-bold">5.00</h2>
+                        <p class="text-gray-500">Trust pilot ratings</p>
+                    </div>
+                </div>
+            </div>
+        </Header>
+
+
+
+    </main>
 </body>
 </html>
